feat: updated artists to work with typeorm, updated yaml file, updated deps, updated readme, updated docker config
