# src/api/album/album.module.ts
@@ -1,8 +1,12 @@
 import { Module } from '@nestjs/common';
 import { AlbumController } from './album.controller';
 import { AlbumService } from './album.service';
+import { Albums } from './entities/album.entity';
+import { TypeOrmModule } from '@nestjs/typeorm';
+import { ConfigModule } from '@nestjs/config';
 
 @Module({
+  imports: [ConfigModule, TypeOrmModule.forFeature([Albums])],
   controllers: [AlbumController],
   providers: [AlbumService],
 })
