# src/api/album/album.service.ts
@@ -1,39 +1,82 @@
 import { Injectable } from '@nestjs/common';
 import { UUID, randomUUID } from 'crypto';
 import { IAlbum } from './interface/album.interface';
-import { db } from 'src/main';
 import { isAlbumDataValid } from './object-validation/validate-album';
-import { notFound } from 'src/errorsAndMessages/errors';
+import {
+  notFound,
+  returnData,
+  successDeletion,
+} from 'src/errorsAndMessages/errors';
+import { Albums } from './entities/album.entity';
+import { InjectRepository } from '@nestjs/typeorm';
+import { Repository } from 'typeorm';
+
 @Injectable()
 export class AlbumService {
-  getAllAlbums() {
-    const albums = db.getAllAlbums();
+  constructor(
+    @InjectRepository(Albums)
+    private readonly albumRepository: Repository<Albums>,
+  ) {}
+
+  async getAllAlbums() {
+    // const albums2= db.getAllAlbums();
+    const albums = await this.albumRepository.find();
     return albums;
   }
-  getAlbumById(id: UUID) {
-    const album = db.getAlbumById(id);
+  async getAlbumById(id: UUID) {
+    const album = await this.albumRepository.findOne({
+      where: { id },
+    });
     if (album) {
       return album;
     }
     return notFound();
   }
-  addAlbum(data: IAlbum) {
+  async addAlbum(data: IAlbum) {
     isAlbumDataValid(data);
-    const newUUID = randomUUID();
+    const newUUID = randomUUID(); // If there is an id in body it doesn't matter
     const newAlbum = {
       id: newUUID,
       name: data.name,
       year: data.year,
       artistId: data.artistId,
     };
-    db.addAlbum(newAlbum);
+    const albums = this.albumRepository.create(newAlbum);
+    await this.albumRepository.save(albums);
+    returnData(newAlbum, 'create');
   }
-  updateAlbum(id: UUID, data: IAlbum) {
+  async updateAlbum(id: UUID, data: IAlbum) {
     isAlbumDataValid(data);
-    db.updateAlbum(id, data);
+    const albumToChange = await this.albumRepository.findOne({
+      where: { id },
+    });
+    if (albumToChange) {
+      albumToChange.name = data.name;
+      albumToChange.year = data.year;
+      albumToChange.artistId = data.artistId;
+      await this.albumRepository.save(albumToChange);
+      returnData(albumToChange, 'update');
+    } else {
+      notFound();
+    }
   }
 
-  deleteAlbum(id: UUID) {
-    db.removeAlbumFromDb(id);
+  async deleteAlbum(id: UUID) {
+    const albumToDelete = await this.albumRepository.findOne({
+      where: { id },
+    });
+    if (albumToDelete) {
+      // const trackToChange = await trackRepository.findOne({
+      //   where: { id },
+      // });
+      // await trackRepository.save(trackToChange);
+      // this.favorites.albums = this.favorites.albums.filter((album) => {
+      //   album.id !== id;
+      // });
+      await this.albumRepository.remove(albumToDelete);
+      successDeletion();
+    } else {
+      notFound();
+    }
   }
 }
